Removed lots of items from redstone furnace & exu crusher so they show up in jei less often
Removed certus dust -> silicon furnace recipe, added alternate centrifuge recipe
Fixed dynamos not being upgradeable
Removed unusable redstone furnace augments
Made Mek configurator easier to craft
Fixed AS lens crashing with missing nbt
Added story quests and a few evil craft items to early magic quests
Fixed Gas Powered quest not unlocking

2.1.0
----------
Fixed quest logic for charged metal quest
Added jei info for creating charged potentia
Added AS grindstone back minus some metal recipes
Added cheaper version of mek plastic blocks (sorta flat colored blocks replacement)
Lowered absurdly tall mountains a bit (~25% lower)
Added tooltips for cobalt level picks
Increase psi block break mining level
Added diamond plate recipe to IE press
Added small chaos orb altar to lost cities
Add pam farm platform to lost cities
Fixed lava flowing in lost cities evil room
Added more bricks to lost cities pallets
Removed main menu ae2 warning
Removed tech requirements to start evilcraft
Added temporary recipes for conductor mast items while bugs get worked out

~update rustic - invis armor bar w/ botania~

2.0.1
----------
Downgraded journey maps for being extra crashy on servers
Fixed kiln bricks being too picky about gems used for crafting
Fixed rustic potion quests not detecting
Turned max butterflies down to 3 (yes 3 total, screw you butterflies)
Added some more flowers to the cities
Made endoflame slightly easier to craft
Made rafflowsia, thermalily, and spectrolus much easier to craft (not forced to start with hydroangeas)


2.0.0
----------
Lots of changes to recipes for magic mods, like a lot, pretty much everything
Removed applied fluidicts quest from questbook
Added jei descriptions for psi materials & some other random items
Nerfed endoflame
Nerfed cloche
Added new custom block (glowing wood made by purifying undead logs)