@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Jan 29 18:22:22 EST 2018
+#Mon Jan 29 21:40:27 EST 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
