@@ -115,14 +115,9 @@ world-199780296 {
 
 
 world-199780302 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=steel cas
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -336,9 +331,14 @@ world1284598226 {
 
 
 world1284646883 {
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=coated
+
+    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
