@@ -1,5 +1,5 @@
 #Splash screen properties
-#Mon Jan 29 18:20:00 EST 2018
+#Mon Jan 29 21:38:03 EST 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
@@ -9,8 +9,8 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=true
 bar=0xCB3D35
+enabled=true
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/forge.png
