@@ -12,6 +12,7 @@ Removed unusable redstone furnace augments
 Made Mek configurator easier to craft
 Fixed AS lens crashing with missing nbt
 Added story quests and a few evil craft items to early magic quests
+Added story quests to IE chapter
 Fixed Gas Powered quest not unlocking
 
 2.1.0
